releases may be found in the file ChangeLog.txt.

New Features for 3.23.1
=======================
[3062809] Add "Add Group" to Toolbar.
[3062788] Add "Add New Entry" menu item to additional context menus.
[] Online help is now available in Spanish, thanks to Jose.

Bugs fixed in 3.23.1
====================
[3084401] When database is locked, clipboard is cleared and the hotkey works.
[3062769] Groups list in Add/Edit dialog box no longer "remembers"
groups from previously opened database.
[] Spanish translations for installer and application updated - thanks
to Jose.

New Features for 3.23
=====================
[3022827] Implement 'stealth' mode where, as long as the user specifies both
the use of the System Tray and a valid Hot Key, then the System Tray
icon and the button on the Taskbar can be hidden.
[3017535] Allow user to edit the generated passwords (Manage->Generate Password)
before copying to the clipboard.
[3011546] "autotype" can now be added to the List View via the Column
Picker (right click on column labels).

Changes to Existing Features in 3.23
====================================
[3026944] Confirm on Delete option has been re-instated.

Bugs fixed in 3.23
==================
[3029576] Ensure user specified backup directory ends with a slash.
[3028926] Entries modified via Synchronize are now displayed correctly if the
user checks the preference "Highlight changed entries" via Options->Display.
[3016803] No longer crashes when trying to view a base entry with
similarly named aliases.
[3013199] PasswordSafe no longer hangs when trying to read preferences
stored in registry by older versions.
[3011972] By adding more checking when creating the menus for Recent Entries
off the System Tray menu, prevent crashing when clicking on the icon.
[3010926] Can now set a non-recurring expiry date using the calendar during
Add/Edit.
[3010541, 3013981, 3011972] Fixed crash when locked and the user
right-clicks the System Tray icon.